--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -50,10 +50,29 @@
             android:layout_height="wrap_content" />
 
     </LinearLayout>
+
     <com.example.testgame.Game1
         android:id="@+id/game"
         android:layout_width="wrap_content"
         android:layout_height="400dp" />
+    <RadioGroup
+        android:id="@+id/rg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/gamer"
+            android:text="玩家先手"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <RadioButton
+            android:id="@+id/ai"
+            android:text="电脑先手"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </RadioGroup>
     <Button
         android:id="@+id/restart"
         android:text="重新开始"
