--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="wrap_content">
         <Button
             android:id="@+id/b1"
             android:layout_weight="1"
@@ -53,8 +53,14 @@
 
     <com.example.testgame.Game1
         android:id="@+id/game"
-        android:layout_width="wrap_content"
-        android:layout_height="400dp" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/score"
+        android:textSize="20sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"/>
     <RadioGroup
         android:id="@+id/rg"
         android:layout_width="match_parent"
@@ -75,7 +81,7 @@
     </RadioGroup>
     <Button
         android:id="@+id/restart"
-        android:text="重新开始"
+        android:text="重新开始\nv5.18 2242"
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
